--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
  
     </section>
     <section class="topicos">
-        <h2 class="topicos__titulo"> Tópicos visitados recentemente.></h2>
+        <h2 class="topicos__titulo"> TÓPICOS VISITADOS RECENTEMENTE</h2>
         <ul class="topicos__lista">
             <li class="topicos__item">
                 <a href="#" class="topicos__link">Android</a>
@@ -168,6 +168,11 @@
                 <a href="#" class="topicos__link">Java</a>
             </li>
         </ul>
+    </section>
+    <section class="newsletter">
+        <h2 class="news__titulo">Fique por dentro das novidades!</h2>
+        <p class="news__subtitulo">Atualizações de e-books, novos livros, promoções e outros.</p>
+    <input type="email" placeholder="Cadastre seu e-mail" class="news__email">
     </section>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script>
@@ -196,6 +201,9 @@
     </script>
 
 </body>
-
+<hr />
+<footer class="rodape">
+        <h2 class="rodape__texto">Grupo Alura</h2>
+</footer>
 
 </html>
