--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="cabeçalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabeçalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -46,7 +46,7 @@
         </div>
         <ul class="opçoes">
             <input type="checkbox" id="opçoes-menu" class="opçoes__botao">
-            <label for="opçoes-menu">
+            <label for="opçoes-menu" class="opçoes__rotulo">
                 <li class="opçoes__item">Categorias</a></li>     
         </label>
         <ul class="lista-menu">
@@ -70,9 +70,17 @@
             <li class="opçoes__item"><a href="#" class="opçoes__link">Minha Estante</a></li>
         </ul>
         <div class="container">
-            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-heart"></a>
-            <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
-            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#">
+                <img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-heart">
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
+                <p class="container__texto">Minha Sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu Perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -83,6 +91,7 @@
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais Vendidos</h2>
         <!-- Slider main container -->
+         <div class="carrossel__container">
     <div class="swiper">
         <!-- Additional required wrapper -->
         <div class="swiper-pagination"></div>
@@ -124,9 +133,11 @@
             <a href="#" class="botoes__ancora">Saiba mais</a>
         </div>
     </div>
+</div>
     <!--Mais Vendidos Cat-->
     <h2 class="carrossel__titulo2">Mais Vendidos</h2>
     <!-- Slider main container -->
+     <div class="carrossel__container">
     <div class="swiper">
         <!-- Additional required wrapper -->
         <div class="swiper-pagination"></div>
@@ -166,6 +177,7 @@
             <a href="#" class="botoes__ancora">Saiba mais</a>
         </div>
     </div>
+</div>
  
     </section>
     <section class="topicos">
